Updated AV-HuBERT model implementation with Seq2Seq implementation based on `PretrainedModel`, and changes model config `AVHuBERTConfig`

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 data/*
 output/*
 
-# Ignore all files in the output folder
-output/*
+# Ignore all files in the refs folder
+refs/*
 
 # Ignore cursor rules
 .cursorignore
