Fixed `prepare_dataset` for avhubert_seq2seq finetuning with process without batching (batch_size = 1).  Enabled `--debug_mode` for troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ checkpoints/*
 
 # Ignore all checkpoints cache file
 **/**/cache/*
+
+# Ignore all files in the Claude folder
+CLAUDE.md
+
+avhubert/
