--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,6 @@ av_hubert/
 avhuberts2s/
 avsl/models/
 
-#Ignore all files in the logs folder
-logs/*
+#Ignore all files in the logs and output folder
+**/logs/*
+**/output/*
