--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .venv
+.vscode
 .DS_Store
 .cursorignore
 .cursor
@@ -16,10 +17,12 @@ pretrained/*
 # Ignore cursor rules
 .cursorignore
 .cursor/rules/*
-checkpoints/*
+
 
 # Ignore all checkpoints cache file
 **/**/cache/*
+checkpoints/*
+**/checkpoints/*
 
 # Ignore all files in the Claude folder
 CLAUDE.md
